# decentralized-llm-inference

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml
.aptos/: config.yaml
crates/contract/: Cargo.toml
crates/contract/src/: client.rs  lib.rs  storage.rs  validator.rs
crates/model-router/: Cargo.toml  README.md
crates/model-router/src/: lib.rs  table.rs
crates/models/: Cargo.toml  README.md
crates/models/examples/: llama_local.rs  phi3.rs  phi3_local.rs
crates/models/src/: hf_hub_utils.rs  http_api.rs  layers_cache.rs  lib.rs  logits_processor.rs  quantized_var_builder.rs  token_output_stream.rs  utils.rs  with_tracing.rs
crates/models/src/fake/: mod.rs
crates/models/src/llama/: layers_worker.rs  mod.rs
crates/models/src/llama/internal/: mod.rs
crates/models/src/phi3/: layers_cache.rs  layers_worker.rs  mod.rs  postprocessing.rs  preprocessing.rs
crates/models/src/phi3/internal/: layer_weights.rs  mlp.rs  mod.rs  qlinear.rs
crates/models/src/remote/: layers_worker.rs  mod.rs  msg.rs
crates/network/: Cargo.toml
crates/network/src/: addr.rs  lib.rs  node.rs
crates/network/src/node/: remote_conn.rs
crates/openai-http/: Cargo.toml
crates/openai-http/src/: api_chat.rs  lib.rs
crates/openai-protocol/: Cargo.toml
crates/p2p-network/: Cargo.toml
crates/p2p-network/src/: addr.rs  lib.rs  node.rs  stun.rs
crates/p2p-network/src/node/: remote_conn.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/protobuf/: llm.proto  registry.proto  worker.proto
crates/protocol/src/: lib.rs  model.rs  openai.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/registry/src/client/: layers_selection.rs  mod.rs  protobuf_stream.rs
crates/registry/src/server/: mod.rs  protobuf_stream.rs  session_manager.rs
crates/usage-service/: Cargo.toml
crates/usage-service/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  shared_map.rs
crates/worker/: Cargo.toml
crates/worker/src/: communication.rs  lib.rs  model_service.rs  rpc.rs  runner.rs  virtual_model_layers.rs
crates/worker/src/runner/: session.rs
