[workspace]
resolver = "2"
members = [ "bin/desktop-app", "bin/layer-worker", "bin/openapi-server", "bin/registry-server","crates/models", "crates/protocol"]

[workspace.dependencies]
serde = "1"
serde_json = "1"
tracing = "0.1"
candle-core = "0.6"
candle-nn = "0.6"
candle-flash-attn = "0.6"
hf-hub = "0.3"
tokenizers = { version = "0.19.1", default-features = false }
tokio = "1"
rand = "0.8"
spin = "0.9"
