[workspace]
resolver = "2"
members = [
    "bin/desktop-app",
    "bin/openai-server",
    "bin/layer-worker",
    "bin/registry-server",
    "crates/model-router",
    "crates/models",
    "crates/p2p-network",
    "crates/openai-protocol",
    "crates/protocol",
    "crates/registry",
    "crates/worker",
    "crates/contract",
    "crates/usage-service",
]

[workspace.dependencies]
anyhow = "1.0"
serde = "1"
serde_json = "1"
tracing = "0.1"
candle-core = "0.6"
candle-nn = "0.6"
candle-flash-attn = "0.6"
hf-hub = "0.3"
tokenizers = { version = "0.19.1", default-features = false }
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
rand = "0.8"
spin = "0.9"
bincode = "1"
log = "0.4"
env_logger = "0.11"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
poem = "3.1"
poem-openapi = "5.1"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
futures-util = "0.3"
tokio-tungstenite = "0.23"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
