[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
serde_json = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["tokio"] }
tokenizers = { workspace = true, features = ["onig"] }
tokio = { workspace = true, features = ["sync"] }
rand = { workspace = true }
spin = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
