[package]
name = "p2p-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
str0m = "0.6"
log = { workspace = true }
rand = { workspace = true }
prost = { workspace = true }
local-ip-address = "0.6"
stun-coder = "2.0"

[features]
default = ["full"]
full = []
