[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
network = { path = "../network" }
model-router = { path = "../model-router" }
rand = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
