[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
p2p-network = { path = "../p2p-network" }
model-router = { path = "../model-router" }
rand = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
