[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
p2p-network = { path = "../p2p-network", version = "0.1.0", default-features = false }
protocol = { path = "../protocol", version = "0.1.0" }

log = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
poem = { workspace = true, optional = true }

reqwest = { workspace = true, optional = true, features = ["json"] }
tokio-tungstenite = { workspace = true, optional = true }

futures-util = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["client", "server"]
client = ["tokio-tungstenite", "reqwest"]
server = ["poem/websocket"]
