[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
candle-core = { workspace = true }
models = { path = "../models", version = "0.1.0" }
model-router = { path = "../model-router", version = "0.1.0" }
protocol = { path = "../protocol", version = "0.1.0" }
p2p-network = { path = "../p2p-network", version = "0.1.0", features = ["full"] }
registry = { path = "../registry", version = "0.1.0", default-features = false, features = ["client"] }
usage-service = { path = "../usage-service", version = "0.1.0" }
prost = { workspace = true }
spin = { workspace = true }
utils = { path = "../utils", version = "0.1.0" }